--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,30 +1,27 @@
 .cardContainer {
-  border: 1px solid red;
-  top: 377px;
-  left: 168px;
   width: 234px;
   height: 267px;
   margin-left: 37px;
+  margin-right: 20px;
+  background: white;
+  margin-bottom: 38px;
+  box-shadow: 0px 3px 6px #E5E5E5;
 }
 
 .cardContainer img {
-  top: 405px;
-  left: 237px;
   width: 95px;
   height: 95px;
   align-items: center;
+  
 }
 
 .detailCard{
-  top: 532px;
-  left: 189px;
-  width: 191px;
   height: 40px;
 }
 
 .number {
-  border: 1px solid green;
   text-align: center;
+  padding-top: 46px;
 }
 
 .number h3 {
@@ -34,17 +31,21 @@
 }
 
 .btnBox {
-  border: 1px solid blue;
   text-align: center;
-  top: 601px;
-  left: 168px;
   width: 234px;
   height: 43px;
+  margin-top: 40px;
 }
 
 .btnBox button {
-  top: 614px;
-  left: 305px;
-  width: 65px;
-  height: 19px;
+  margin-top: 15px;
+  width: 50%;
+  color: #263238;
+  border: none;
+  background: white;
+}
+
+.btnBox button img {
+  width: 13px;
+  height: 14px;
 }
