--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,38 +1,51 @@
 .titleContainer {
-  border: 1px solid blue;
+  background: transparent linear-gradient(to right, #AE276F, #5F1478);
   top: 0px;
   left: 0px;
   width: 100%;
   height: 64px;
 }
 
+.titleContainer h1 {
+  padding: 20px;
+}
+
 .inputContainer {
-  border: 1px solid red;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 261px;
+  background-image: url("../../assets/fundo-busca.png");
 }
 
 .inputContainer div {
-  border: 1px solid red;
-  top: 147px;
   left: 168px;
-  width: 900px;
-  height: 55px;
+  width: 950px;
   margin: 0 auto;
 }
 
 .inputContainer input {
-  top: 147px;
+  margin-top: 147px;
   left: 168px;
-  width: 849px;
-  height: 55px;
+  width: 830px;
+  height: 75px;
   border-radius: 8px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border: none;
 }
 
 
 .inputContainer button {
-  width: 49px;
-  height: 49px
+  width: 50px;
+  height: 75px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border: none;
+  background: white;
+}
+
+button img {
+  /* width: 49px;
+height: 49px; */
 }
