--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,17 +1,54 @@
 .app-container {
   width: 100%;
-  border: 1px solid gray;
+  background: #F6F4F6;
 }
+
 
 .topContainer {
   display: flex;
   justify-content: space-between;
+  height: 73px;
+
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.topContainer h1 {
+  font: Muli sans-serif;
+  color: #5F1478;
+}
+
+.topContainer button {
+  top: 293px;
+  left: 1041px;
+  width: 173px;
+  height: 48px;
+  background: #E76316;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font: normal normal bold 18px/23px;
 }
 
 .pokemon-container {
   display: flex;
   width: 90%;
-  border: 1px solid yellow;
   flex-wrap: wrap;
   margin: 0 auto;
+}
+
+.btnLoadBox {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.load-more {
+  background: #E76316 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #92207242;
+  border-radius: 8px;
+  width: 173px;
+  height: 48px;
+  border: none;
+  color: white;
 }
